#11 Perform test on script CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ branches:
     - master
 
 install:
-  - npm install
-  - npm run generate
+  - yarn install
+  - yarn run generate
 
 script:
-  - echo "Skipping tests"
+  - yarn test
 
 deploy:
   provider: pages
