#11 QA Add ESLint to scrutinizer config + scrutinizer badge

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,6 +4,7 @@ build:
       tests:
         override:
           - js-scrutinizer-run
+          - eslint-run "components/**"
 
 checks:
   javascript:
