--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,4 @@
+# https://scrutinizer-ci.com/docs/configuration
 build:
   nodes:
     analysis:
@@ -5,6 +6,10 @@ build:
         override:
           - js-scrutinizer-run
           - eslint-run --ext .js,.vue --ignore-path .gitignore .
+
+filter:
+  excluded_paths:
+    - plugins/*
 
 checks:
   javascript:
